# haicu_sims

./: .gitignore  .lfsconfig  CMakeLists.txt  README.md  pyproject.toml
data/: __init__.py  rk4_lorenz.csv  rk4_sho.csv  trajectory.csv
data/bender/: A_bender_unaligned.csv  FA_Bield_Bender_100large.csv  FA_Bield_Bender_Iso_100large.csv  FA_Bield_Bender_Iso_100large_neg.csv  FA_Bield_Bender_Iso_small.csv  FA_bender.csv  bender_bfield_unaligned_30small.csv  paraview_bfield_bender_state.pvsm  paraview_bfield_bender_state_w_slice.pvsm
data/bfield/: FA_Bfield_OuterGateBCoil_Iso_100large.csv  FA_Bfield_Qpole_Iso_100large.csv  FA_Bfield_Total_Iso_100large.csv
data/bitter_coils/FA_lower_inner_coil/: FA_bcoil_low_in_particle_102.csv  FA_bcoil_low_in_particle_103.csv  FA_bcoil_low_in_particle_104.csv  FA_bcoil_low_in_particle_105.csv  FA_bcoil_low_in_particle_106.csv  FA_bcoil_low_in_particle_107.csv  FA_bcoil_low_in_particle_108.csv  FA_bcoil_low_in_particle_109.csv  FA_bcoil_low_in_particle_110.csv  FA_bcoil_low_in_particle_114.csv  FA_bcoil_low_in_particle_115.csv  FA_bcoil_low_in_particle_116.csv  FA_bcoil_low_in_particle_117.csv  FA_bcoil_low_in_particle_118.csv  FA_bcoil_low_in_particle_119.csv  FA_bcoil_low_in_particle_120.csv  FA_bcoil_low_in_particle_121.csv  FA_bcoil_low_in_particle_122.csv  (+349 more)
data/bitter_qpole/: bitter_qpole_bfield_100grid_fullwidth.csv  bitter_qpole_bfield_30grid_halfwidth.csv
data/traces/: particle_100_trajectory.csv  particle_10_trajectory.csv  particle_11_trajectory.csv  particle_12_trajectory.csv  particle_13_trajectory.csv  particle_14_trajectory.csv  particle_15_trajectory.csv  particle_16_trajectory.csv  particle_17_trajectory.csv  particle_18_trajectory.csv  particle_19_trajectory.csv  particle_1_trajectory.csv  particle_20_trajectory.csv  particle_21_trajectory.csv  particle_22_trajectory.csv  particle_23_trajectory.csv  particle_24_trajectory.csv  particle_25_trajectory.csv  particle_26_trajectory.csv  particle_27_trajectory.csv  particle_28_trajectory.csv  particle_29_trajectory.csv  particle_2_trajectory.csv  particle_30_trajectory.csv  particle_31_trajectory.csv  particle_32_trajectory.csv  particle_33_trajectory.csv  particle_34_trajectory.csv  particle_35_trajectory.csv  particle_36_trajectory.csv  particle_37_trajectory.csv  particle_38_trajectory.csv  particle_39_trajectory.csv  particle_3_trajectory.csv  particle_40_trajectory.csv  particle_41_trajectory.csv  particle_42_trajectory.csv  particle_43_trajectory.csv  particle_44_trajectory.csv  particle_45_trajectory.csv  (+60 more)
include/: constants.h  rbf_interpolator.hpp
src/bcoils/: test.py
src/bfield/: final_bfield_calcs.ipynb
src/particle_tracing/: main.cpp  rbf_interpolator.cpp
src/visualizaiton/: test_viz_dir.py
src/visualization/: trajectory.csv  viz_bfield_qpole.ipynb  viz_bfield_qpole_lines.ipynb
tests/: interp.cpp  interpolation.cpp  main.cpp  old.cpp  rk4.cpp  rk4_lorenz.cpp  rk4_sho.cpp  test_npgrad.ipynb  velocity_gen.cpp
(+1846 files in other folders)
