[project]
name = "haicu-sims"
version = "0.1.0"
description = ""
authors = [
    {name = "Filo Ghaly", email = "filobateer.ghaly@ucalgary.ca"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "haicu_sims", from = "src"},
            {include = "bfield", from = "haicu_sims"},
            {include = "bcoils", from = "haicu_sims"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
