[project]
name = "haicu-sims"
version = "0.1.0"
description = ""
authors = [
    {name = "Filo Ghaly", email = "filobateer.ghaly@ucalgary.ca"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]

[tool.poetry]
packages = [
            {include = "bfield", from = "src"},
            {include = "bcoils", from = "src"},
            
            {include = "data", from = "."},
            ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
