[project]
name = "haicu-sims"
version = "0.1.0"
description = ""
authors = [
    {name = "Filo Ghaly", email = "filobateer.ghaly@ucalgary.ca"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]

[tool.poetry]
packages = [
            {include = "bfield", from = "src"},
            {include = "bcoils", from = "src"},
            {include = "visualization", from = "src"},
            {include = "qpole", from = "src"},
            
            {include = "data", from = "."},
            ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
